--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,18 @@ espressoCore = "3.5.1"
 appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.0"
+fragment = "1.7.1"
 constraintlayout = "2.1.4"
 multidex = "2.0.1"
 hilt = "2.51.1"
 retrofit = "2.11.0"
 glide = "4.16.0"
+moshi = "1.15.1"
+converter-moshi = "2.4.0"
+androidx-compose-runtime = "1.6.7"
+lifecycle-runtime-compose = "2.6.2"
+legacySupportV4 = "1.0.0"
+recyclerview = "1.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -21,14 +28,20 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+androidx-activity = { group = "androidx.activity", name = "activity-ktx", version.ref = "activity" }
+lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle-runtime-compose" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-multidex = { group = "androidx.multidex", name = "multidex", version.ref = "multidex" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android" , version.ref = "hilt"}
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing" , version.ref = "hilt"}
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler" , version.ref = "hilt"}
-retrofit = { group = "com.squareup.retrofit2", name = "retrofit" , version.ref = "retrofit"}
 glide = { group = "com.github.bumptech.glide", name = "glide" , version.ref = "glide"}
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit" , version.ref = "retrofit"}
+converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi" , version.ref = "converter-moshi"}
+moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin" , version.ref = "moshi"}
+androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
+androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
