--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,8 @@ glide = "4.16.0"
 moshi = "1.15.1"
 converter-moshi = "2.4.0"
 androidx-compose-runtime = "1.6.7"
-lifecycle-runtime-compose = "2.6.2"
+lifecycle-runtime-compose = "2.8.0"
+lifecycle-viewmodel-ktx = "2.8.0"
 legacySupportV4 = "1.0.0"
 recyclerview = "1.3.0"
 
@@ -42,6 +43,8 @@ converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi" ,
 moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin" , version.ref = "moshi"}
 androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle-viewmodel-ktx" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
