--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,23 +17,33 @@ glide = "4.16.0"
 moshi = "1.15.1"
 converter-moshi = "2.4.0"
 androidx-compose-runtime = "1.6.7"
-lifecycle-runtime-compose = "2.8.0"
-lifecycle-viewmodel-ktx = "2.8.0"
+lifecycle-runtime-compose = "2.8.1"
+lifecycle-viewmodel-ktx = "2.8.1"
 legacySupportV4 = "1.0.0"
-recyclerview = "1.3.0"
+recyclerview = "1.3.2"
+room = "2.6.1"
+ksp = "1.9.23-1.0.19"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-androidx-activity = { group = "androidx.activity", name = "activity-ktx", version.ref = "activity" }
-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle-runtime-compose" }
-androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment" }
+androidx-activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
+androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle-runtime-compose" }
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle-viewmodel-ktx" }
 androidx-multidex = { group = "androidx.multidex", name = "multidex", version.ref = "multidex" }
+androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+androidx-room = { group = "androidx.room", name = "room", version.ref = "room" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler" , version.ref = "room"}
+androidx-room-guava = { group = "androidx.room", name = "room-guava" , version.ref = "room"}
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx" , version.ref = "room"}
+androidx-room-paging = { group = "androidx.room", name = "room-paging" , version.ref = "room"}
+
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android" , version.ref = "hilt"}
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing" , version.ref = "hilt"}
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler" , version.ref = "hilt"}
@@ -41,13 +51,12 @@ glide = { group = "com.github.bumptech.glide", name = "glide" , version.ref = "g
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit" , version.ref = "retrofit"}
 converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi" , version.ref = "converter-moshi"}
 moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin" , version.ref = "moshi"}
-androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
-androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle-viewmodel-ktx" }
 
+junit = { group = "junit", name = "junit", version.ref = "junit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-jetbrains-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+
+com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
